Working with kin-openapi. Problem with circular references
